--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button class="navbar-toggler" type="button"  data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="./index.html">Ristorante Con Fusion</a>
+            <a class="navbar-brand" href="./index.html"><img src="img/logo.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -30,10 +30,51 @@
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in"></span> Login
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
    
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                    <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                    <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputPassword3">Password</label>
+                                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember me
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -41,7 +82,13 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm-3 align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a role="button" class="btn btn-block nav-link btn-warning" href="#reserve" 
+                    data-toggle="tooltip" data-html="true" 
+                    title="Or Call us at <br><strong>+852 12345678</strong>" data-placement="bottom">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -69,8 +116,13 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm order-sm-last col-md">
-                <h2>Weekend Grand Buffet</h2>
+            <div class="media">
+                <div class="media-body">
+                <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2> 
                 <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                </div>
+                <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">     
+            </div>
             </div>
         </div>
 
@@ -89,7 +141,92 @@
                 </div>
             </div>
         </div>
+
+        <div class="row row-content justify-content-center">
+            <div class="col-12 col-sm-8 align-self-center">
+                <div class="card" id="reserve">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="form card-body">
+                        <div class="row row-card">
+                            <div class="col-12 col-sm-2">Number of Guests</div>             
+                            <div class="col-10 col-sm">
+                                <div class="row">
+                                    <div class="col-2 col-sm-1">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="radio" id="radio1" value="">
+                                        <label class="form-check-label" for="radio1">
+                                        1
+                                        </label>
+                                    </div>
+                                    </div>
+                                    <div class="col-2 col-sm-1">
+                                    <div class="form-check col-2 col-sm-1">
+                                        <input class="form-check-input" type="radio" name="radio" id="radio2" value="">
+                                        <label class="form-check-label" for="radio2">2</label>
+                                    </div> 
+                                    </div>
+                                    <div class="col-2 col-sm-1">
+                                    <div class="form-check col-2 col-sm-1">
+                                        <input class="form-check-input" type="radio" name="radio" id="radio3" value="">
+                                        <label class="form-check-label" for="radio3">
+                                        3
+                                        </label>
+                                    </div>
+                                    </div>
+                                    <div class="col-2 col-sm-1">
+                                    <div class="form-check col-2 col-sm-1">
+                                        <input class="form-check-input" type="radio" name="radio" id="radio4" value="">
+                                        <label class="form-check-label" for="radio4">
+                                        4
+                                        </label>
+                                    </div>
+                                    </div>
+                                    <div class="col-2 col-sm-1">
+                                    <div class="form-check col-2 col-sm-1">
+                                        <input class="form-check-input" type="radio" name="radio" id="radio5" value="">
+                                        <label class="form-check-label" for="radio5">
+                                        5
+                                        </label>
+                                    </div>
+                                    </div>
+                                    <div class="col-2 col-sm-1">
+                                    <div class="form-check col-2 col-sm-1">
+                                        <input class="form-check-input" type="radio" name="radio" id="radio6" value="">
+                                        <label class="form-check-label" for="radio6">
+                                        6
+                                        </label>
+                                    </div>  
+                                    </div>
+                                </div>     
+                            </div>
+                        </div>
+                        <div class="row row-card">
+                            <div class="col-12 col-sm-2">Date and Time</div>
+                            <div class="col-12 col-sm">
+                                <div class="form-group row">
+                                    <div class="col-12 col-sm-4">
+                                        <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                    </div>
+                                    <div class="col-12 col-sm-4">
+                                        <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 offset-0 offset-sm-2">
+                                <button type="submit" class="btn btn-primary">
+                                    Reserve
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    
     <footer class="footer">
         <div class="container">
             <div class="row">             
@@ -135,6 +272,11 @@
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</script>
 </body>
 
 </html>
